comit foto casal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Convite Viviane & Thiago</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
@@ -36,10 +35,13 @@
   <section id="page2" class="page page-hero" aria-label="Detalhes principais" hidden>
     <div class="hero-bg" aria-hidden="true"></div>
     <div class="glass-card">
-      <h2 id="l1">Com a bênção de Deus</h2>
-      <h1 id="l2">Viviane & Thiago</h1>
+<!--       <h2 id="l1">Com a bênção de Deus</h2> -->
+      <h1 id="l2">Viviane</h1>
+      <h1 id="l2">&</h1>
+      <h1 id="l2">Thiago</h1>
+
       <p id="l3">Convidam para a celebração do seu casamento.</p>
-      <p id="l4" class="meta"><strong>15 de novembro, às 18h</strong> — Espaço D’Pirozzi</p>
+      <!-- <p id="l4" class="meta"><strong>15 de novembro, às 18h</strong> — Espaço D’Pirozzi</p> -->
       <button id="cta2" class="btn" type="button" onclick="goTo(3)">Ver detalhes</button>
     </div>
   </section>
