comit js animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="envelope3d" id="envelope" role="button" aria-label="Abrir convite">
         <div class="pocket"></div>
         <div class="flap"></div>
-        <div class="seal">♥</div>
+        <!-- selo com coração (Bootstrap Icon) -->
+        <div class="seal"><i class="bi bi-heart-fill" aria-hidden="true"></i></div>
         <div class="letter"></div>
       </div>
     </div>
@@ -72,7 +73,7 @@
               <span>Fale com o Noivo</span>
             </a>
           </div>
-          <button class="btn btn-outline" id="back-details" type="button" aria-label="Voltar à frente">Voltar</button>
+          <button class="btn" id="back-details" type="button" aria-label="Voltar à frente">Voltar</button>
         </div>
       </div>
     </div>
